feat: Created Update Doctor APIs & modify some routes
